--- a/node/pnpm/Dockerfile
+++ b/node/pnpm/Dockerfile
@@ -1,2 +1,2 @@
 FROM node:16.11.1-bullseye
-RUN npm i -g pnpm && pnpm config set registry https://registry.npmmirror.com
+RUN npm config set registry https://registry.npmmirror.com && npm i -g pnpm && pnpm config set registry https://registry.npmmirror.com
